--- a/pages/index/index.axml
+++ b/pages/index/index.axml
@@ -1,3 +1,19 @@
 <view>
   this is a blank page
 </view>
+<view>
+ <map id="map" longitude="103.855457" latitude="1.339712" scale="{{scale}}" controls="{{controls}}"
+ onControlTap="controltap" markers="{{markers}}"
+ onMarkerTap="markertap"
+ polyline="{{polyline}}"
+ circles="{{circles}}"
+ onRegionChange="regionchange"
+ onTap="tap"
+ show-location style="width: 100%; height: 300px;"
+ include-points="{{includePoints}}"></map>
+ <button onTap="changeScale">changeScale</button>
+ <button onTap="getCenterLocation">getCenterLocation</button>
+ <button onTap="moveToLocation">moveToLocation</button>
+ <button onTap="changeCenter">changeCenter</button>
+ <button onTap="changeMarkers">changeMarkers</button>
+</view>
