--- a/pages/register/register.axml
+++ b/pages/register/register.axml
@@ -3,7 +3,7 @@
     <image mode="scaleToFill" id="logo" alt= "logo" src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg"/>
   </view>
   <view class="cont-titulo">
-    <text class="titulo">REGISTRO</text>
+    <text class="titulo" onTap="go">REGISTRO</text>
   </view>
 
   <view class="cont-form-login">
@@ -13,6 +13,7 @@
       <input password="true" placeholder="Confirme la Contraseña " id="contra"/>
       <button size="default" type="primary">INGRESAR</button>
     </form>  
+    <button size="default" type="primary" onTap="go">LOGIN</button>
   </view>
-    
+
 </view>
