--- a/pages/firstLogin/firstLogin1/firstLogin1.axml
+++ b/pages/firstLogin/firstLogin1/firstLogin1.axml
@@ -14,6 +14,6 @@
     <text class="text-2">llegar al campus</text>
   </view>
   <view class="cont-button">
-    <button size="default" type="primary" class="button">Continuar</button>
+    <button size="default" type="primary" class="button" onTap="siguientePagina">Continuar</button>
   </view>
 </view>
