--- a/pages/register/register.axml
+++ b/pages/register/register.axml
@@ -12,12 +12,9 @@
       <input placeholder="Correo Electronico " name="mail"  id="correo" />
       <input password="true" placeholder="Contraseña " name="pass1" id="contra"/>
       <input password="true" placeholder="Confirme la Contraseña" name="pass2"  id="contra2"/>
-      <view class="btn-area">
-    <button formType="submit">Submit</button>
-    </view>
-      <!-- <button size="default" type="primary" form-type="submit"  >INGRESAR</button> -->
+    <button  size="default" type="primary" formType="submit">Registrarse</button>
+      <!-- <button size="default" type="primary" form-type="submit"  >Registrarse</button> -->
     </form>  
-    <button size="default" type="primary" onTap="go">LOGIN</button>
   </view>
 
 </view>
