--- a/pages/mapstry/mapstry.axml
+++ b/pages/mapstry/mapstry.axml
@@ -1,12 +1,16 @@
-
-<view class="mapview">
-
- <button size="default" type="primary" onTap="getLoc">Get location</button>
-  <text > La: {{latitude}} Lo: {{longitude}}</text>
- 
-
-  <map id="map" longitude="-74.034242" latitude="4.862671" scale="8"></map>
-
- 
- 
+<view>
+ <map id="map" longitude="103.855457" latitude="1.339712" scale="{{scale}}" controls="{{controls}}"
+ onControlTap="controltap" markers="{{markers}}"
+ onMarkerTap="markertap"
+ polyline="{{polyline}}"
+ circles="{{circles}}"
+ onRegionChange="regionchange"
+ onTap="tap"
+ show-location style="width: 100%; height: 300px;"
+ include-points="{{includePoints}}"></map>
+ <button onTap="changeScale">changeScale</button>
+ <button onTap="getCenterLocation">getCenterLocation</button>
+ <button onTap="moveToLocation">moveToLocation</button>
+ <button onTap="changeCenter">changeCenter</button>
+ <button onTap="changeMarkers">changeMarkers</button>
 </view>
