--- a/pages/registration/registerCar/registerCar.axml
+++ b/pages/registration/registerCar/registerCar.axml
@@ -5,19 +5,19 @@
 
   <form class="form" onSubmit="formSubmitRegistrar">
     <view>
-      <input class="imodelo" placeholder="Modelo" id="name"/>
+      <input class="imodelo" placeholder="Modelo" name="modelo" id="name"/>
     </view>
     <view>
-      <input class="icupo" password="true" placeholder="Cupo Máx" id="name"/>
+      <input class="icupo"  placeholder="Cupo Máx" name="cupo" id="name"/>
     </view>
-  </form>
+
 
   <view class="cont-text2">
     <checkbox value=""/><text class="text-2">Aceptar <text class="btn-regis">Términos y Condiciones</text></text>
   </view>
 
   <view class="cont-button">
-    <button size="default" type="primary" class="button" onTap="siguientePagina">Registrar</button>
+    <button size="default" type="primary" class="button" formType="submit">Registrar</button>
   </view>
-
+</form>
 </view>
